new text-box for text output

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <button class="rps">Paper</button>
             <button class="rps">Scissors</button>
         </div>
+        <div class="text-box">
+                <p id="log-box"></p>
+            </div>
     </div>
 
     <script>
